# html-sanitizer-service

./: .gitignore  LICENSE  README.md
lang/csharp/csharp-01/: HttpRequestExtensions.cs  Models.cs  Program.cs  RawRequestBodyFormatter.cs  TextPlainInoutFormatter.cs  csharp-01.csproj
lang/csharp/csharp-01/Properties/: launchSettings.json
lang/csharp/csharp-01/scripts/: test-post
lang/deno/deno-01/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
lang/deno/deno-01/.devcontainer/content/: starship.toml
lang/deno/deno-01/scripts/: build  build.ts  run-server  test-post
lang/deno/deno-01/src/: config.ts  deps.ts  handleRequest.ts  index.ts  log.ts  routes.ts  sanitize.ts  types.ts
lang/deno/deno-01/src/controllers/: 404.ts  default-get.ts  default-post.ts  errorHandler.ts
lang/node/node-01/: package-lock.json  package.json
lang/node/node-01/scripts/: test-post
lang/node/node-01/src/: index.js  sanitize.js
lang/rust/rust-01/: Cargo.toml
lang/rust/rust-01/scripts/: run-server  test-post
lang/rust/rust-01/src/: main.rs  request_handlers.rs  sanitizer.rs
