[package]
name = "rust-01"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
actix = "0.12.0"
actix-web = "3.3.2"
env_logger = "0.9.0"
log = "0.4.14"
ammonia = "3.1.2"
